# personal_messenger_bot

./: .gitignore  LICENSE  LICENSE-BSD  README.md  config.toml  food_buff_data.toml  pyproject.toml  requirements.txt  run.sh
bot/: __init__.py  __main__.py  types.py  utils.py
bot/commands/: __init__.py  di.py
bot/commands/food_buff/: __init__.py
bot/commands/plugins/food_buff/: __init__.py
bot/commands/plugins/info/: __init__.py
bot/config/: __init__.py
bot/database/: __init__.py
bot/plugins/food_buff/: __init__.py  data.toml
bot/plugins/info/: data.toml
bot/utils/: __init__.py
modules/: calc.py  command_parser.py  config.py  env.py  facebook.py  lifecycle.py  logging.py  run.py  shell.py
modules/cmd/: __init__.py  client.py
modules/cmd/api/: __init__.py  test_cmd.py
modules/command/: __init__.py  api.py  di.py
modules/command/commands/food_buff/: __init__.py  data.toml
modules/command/commands/info/: __init__.py
modules/toram/: __init__.py
modules/toram/commands/food_buff/: __init__.py  (+1 more)
plugins/cli/: __init__.py
plugins/command/: __init__.py  api.py  di.py
plugins/config/: __init__.py
plugins/db/: __init__.py
plugins/dew/: __init__.py
plugins/dew_parser/: __init__.py
plugins/env/: __init__.py
plugins/event/: __init__.py
plugins/facebook/: __init__.py
plugins/lifecycle/: __init__.py
plugins/toram/: SCHEMA.md  __init__.py  schema.sql
plugins/toram/scripts/: load_food_buff.sql
plugins/toram/static/: food_buff.csv  player.csv
scripts/: build.bat  build.sh  run.bat  run.sh
yui/: __init__.py  __main__.py  kernel.py  types.py  utils.py
yui/modules/: config.py  env.py  lifecycle.py  logging.py
yui/modules/cmd/: __init__.py
(+6 files in other folders)
