[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<=3.12"
name = "yui"
description= "a minimal core for generic bot apps"
dynamic = ["version", "readme"]
authors = [
    {name = "jma"},
]

dependencies = [
    "python-dotenv==1.1.1",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "linkd==0.1.0",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[tool.setuptools]
packages = ["yui"]


[tool.setuptools.dynamic]
version = {attr = "yui.__version__"} 
readme = {file = ["README.md"]}


[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]